yaml/apibuilder-deploy.yaml
# Copyright 2017 Istio Authors
#
#   Licensed under the Apache License, Version 2.0 (the "License");
#   you may not use this file except in compliance with the License.
#   You may obtain a copy of the License at
#
#       http://www.apache.org/licenses/LICENSE-2.0
#
#   Unless required by applicable law or agreed to in writing, software
#   distributed under the License is distributed on an "AS IS" BASIS,
#   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#   See the License for the specific language governing permissions and
#   limitations under the License.

##################################################################################################
# api-sample2 service
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: ${apiname}
  labels:
    apic-managed: "true"
    app: ${apiname}
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: ${apiname}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: ${apiname}
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: ${apiname}
        version: v1
    spec:
      containers:
      - image: ${imagelocation}
        imagePullPolicy: IfNotPresent
        name: ${apiname}
        ports:
        - containerPort: 8080
