yaml/apibuilder-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ${apiname}
  namespace: ${namespace}
spec:
  gateways:
  - ${apiname}-gateway
  hosts:
  - '*'
  http:
  - match:
    - uri:
        prefix: /api/v${version}/${apiname}
    rewrite:
        uri: /api
    route:
    - destination:
        host: ${apiname}
        port:
          number: 8080
